--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <svg viewBox="-100 -100 200 200" width="300">
   <circle id="clockface" r="98" />
 
-  <line id="index" x1="80" y1="0" y2="90" y2="0" />
+  <line id="index" x1="80" y1="0" x2="90" y2="0" />
 
   <circle id="origin" r="2" />
 </svg>
