--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <svg viewBox="-100 -100 200 200" width="300">
-  <line id="index" x1="80" y1="0" x2="90" y2="0" />
+  <defs>
+    <line id="index" x1="80" y1="0" x2="90" y2="0" />
+  </defs>
 
-  
   <circle id="clockface" r="98" />
-
-
   <circle id="origin" r="2" />
 </svg>
