--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
   </defs>
 
   <circle id="clockface" r="98" />
+
+  <g d="indices">
+    <use href="index" />
+  </g>
+
+
   <circle id="origin" r="2" />
 </svg>
