--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <g id="indices">
     <use href="#index" />
+    <use href="#index" transform="rotate(30)" />
   </g>
-
 
   <circle id="origin" r="2" />
 </svg>
