--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <g id="indices">
     <use href="#index" />
     <use href="#index" transform="rotate(30)" />
+    <use href="#index" transform="rotate(60)" />
+    <use href="#index" transform="rotate(90)" />
   </g>
 
   <circle id="origin" r="2" />
