--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <use href="#index" transform="rotate(30)" />
     <use href="#index" transform="rotate(60)" />
     <use href="#index" transform="rotate(90)" />
+    <use href="#index" transform="rotate(120)" />
+    <use href="#index" transform="rotate(150)" />
+    <use href="#index" transform="rotate(180)" />
+    <use href="#index" transform="rotate(210)" />
+    <use href="#index" transform="rotate(240)" />
+    <use href="#index" transform="rotate(270)" />
+    <use href="#index" transform="rotate(300)" />
+    <use href="#index" transform="rotate(330)" />
   </g>
 
   <circle id="origin" r="2" />
