--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <use href="#index" transform="rotate(330)" />
   </g>
 
-  <line class="hand" id="hours" x1="0" y1="0" x2="0" y="-50" />
+  <line class="hand" id="hours" x1="0" y1="0" x2="0" y2="-50" />
 
   <circle id="origin" r="2" />
 </svg>
