--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </g>
 
   <line class="hand" id="hours" x1="0" y1="0" x2="0" y2="-50" />
+  <line class="hand" id="minutes" x1="0" y1="0" x2="0" y2="-95" />
 
   <circle id="origin" r="2" />
 </svg>
