--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <line class="hand" id="hours" x1="0" y1="0" x2="0" y2="-50" />
   <line class="hand" id="minutes" x1="0" y1="0" x2="0" y2="-95" />
   <g class="hand">
+    <g id="seconds" class="hand">
     <line x1="0" y1="0" x2="0" y2="-55" />
     <circle cx="0" cy="-60" r="5" fill="none" />
     <line x1="0" y1="-65" x2="0" y2="-95" />
